--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -2,7 +2,7 @@
 
 body {
     width: 821px;
-    padding-top: 15000px;
+    padding-top: 150px;
     max-width: 821px;
     margin: 0 auto;
     background-color: #e8e8e8;
@@ -38,7 +38,7 @@ body {
 }
 
 .img {
-    outline: 10px solid white;
+    outline: 10px solid blue;
     margin-bottom: 100px;
     box-shadow: 0 15px 65px rgba(15, 16, 16, 0.15);
 }
