--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*Обнуление*/
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -74,113 +75,59 @@ h1, h2, h3, h4, h5, h6 {
 
 /*--------------------*/
 body {
-  width: 821px;
-  padding-top: 150px;
-  max-width: 821px;
-  margin: 0 auto;
-  background-color: #e8e8e8;
-  color: #273d46;
-  background: url(../../img/Ellipse_1_copy.png) 250px 85px no-repeat;
+  background: url(../../img/background.png) center/cover no-repeat;
 }
 
-.top {
-  color: gray;
+.header {
+  margin: 0px auto;
+  max-width: 800px;
 }
-
-.content-top p {
-  color: #273d46;
+.header__logo {
+  margin: 0px auto;
+  max-width: 800px;
+  margin: 90px 0 100px 300px;
+}
+.header__logo:hover {
+  opacity: 0;
+}
+.header__text {
   text-align: center;
-  font-weight: 400;
+  color: #ffffff;
+  font-family: Lato;
 }
-.content-top p:first-child {
-  letter-spacing: 2.8px;
-  text-transform: uppercase;
-  font-size: 14px;
-  opacity: 0.6;
-  font-weight: 400;
-  font-family: Arial, Helvetica, sans-serif;
-}
-.content-top p:last-child {
-  font-family: "Times New Roman", Times, serif;
-  line-height: 50px;
-  font-size: 36px;
-  margin-bottom: 70px;
-  margin-top: 10px;
-}
-
-.img {
-  outline: 10px solid blue;
-  margin-bottom: 100px;
-  -webkit-box-shadow: 0 15px 65px rgba(15, 16, 16, 0.15);
-          box-shadow: 0 15px 65px rgba(15, 16, 16, 0.15);
-}
-
-.content-middle p {
-  font-size: 24px;
-  font-family: "Times New Roman", Times, serif;
-  opacity: 0.8;
-  margin-left: 35px;
-  margin-right: 40px;
+.header__title {
   line-height: 40px;
-  font-weight: 500;
+  font-weight: 900;
+  font-size: 34px;
+  letter-spacing: 5.43px;
 }
-.content-middle p:first-child {
-  margin-bottom: 40px;
+.header__subtitle {
+  font-size: 26px;
+  font-weight: 400;
+  letter-spacing: 4.15px;
+  margin-bottom: 100px;
 }
-
-.content-bottom {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-left: 30px;
-  margin-top: 45px;
-}
-.content-bottom li {
-  font-size: 20px;
-  line-height: 35px;
-  color: #273d46;
-}
-.content-bottom li:first-child {
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
-}
-.content-bottom li:nth-child(2) {
-  color: #80b7b3;
-  font-style: italic;
-}
-.content-bottom li:nth-child(3) {
-  font-weight: bold;
-}
-.content-bottom li:last-child {
-  margin-bottom: 60px;
-}
-.content-bottom li:last-child span {
-  text-decoration: line-through;
-  opacity: 0.3;
-}
-.content-bottom li::before {
-  content: url("../../img/check_icon.png");
-  position: relative;
-  top: 5px;
-  padding-right: 10px;
-}
-
-.link {
-  color: white;
+.header__button {
+  font-size: 16px;
+  font-weight: 400;
+  color: #ffffff;
   text-transform: uppercase;
-  background: #80b7b3;
-  border-radius: 25px;
-  -webkit-box-shadow: 0 6px 40px rgba(128, 183, 179, 0.54);
-          box-shadow: 0 6px 40px rgba(128, 183, 179, 0.54);
-  letter-spacing: 2.8px;
-  padding: 15px 35px;
-  margin-left: 30px;
+  letter-spacing: 0.67px;
+  padding: 15px 40px;
 }
-.link::after {
-  content: url("../../img/Shape.png");
-  position: relative;
-  top: 2px;
-  left: 7px;
+.header__arrow {
+  display: block;
+  margin: 80px 0 0 415px;
 }
-
-.margin {
-  margin-top: 110px;
-  visibility: hidden;
+.header__arrow img:hover {
+  color: black;
+}
+.header .button {
+  border: 1px solid white;
+  font-family: Lato;
+  margin: 0 0 0 340px;
+}
+.header .button:hover {
+  color: red;
+  border: 1px solid red;
 }
