--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,122 +1,76 @@
 @import "_nullstyle";
 
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap");
+
 body {
-    width: 821px;
-    padding-top: 150px;
-    max-width: 821px;
-    margin: 0 auto;
-    background-color: #e8e8e8;
-    color: #273d46;
-    background: url(../../img/Ellipse_1_copy.png) 250px 85px no-repeat;
+    background: url(../../img/background.png) center / cover no-repeat;
 }
 
-.top {
-    color: gray;
-}
+.header {
+    margin: 0px auto;
+    max-width: 800px;
 
-.content-top p {
-    color: #273d46;
-    text-align: center;
-    font-weight: 400;
+    &__logo {
+        margin: 0px auto;
+        max-width: 800px;
+        margin: 90px 0 100px 300px;
+        &:hover {
+            opacity: 0;
+        }
+    }
 
-    &:first-child {
-        letter-spacing: 2.8px;
-        text-transform: uppercase;
-        font-size: 14px;
-        opacity: 0.6;
+    &__text {
+        text-align: center;
+        color: #ffffff;
+        font-family: Lato;
+    }
+
+    &__title {
+        line-height: 40px;
+        font-weight: 900;
+        font-size: 34px;
+        letter-spacing: 5.43px;
+    }
+
+    &__subtitle {
+        font-size: 26px;
         font-weight: 400;
-        font-family: Arial, Helvetica, sans-serif;
+        letter-spacing: 4.15px;
+        margin-bottom: 100px;
     }
 
-    &:last-child {
-        font-family: "Times New Roman", Times, serif;
-        line-height: 50px;
-        font-size: 36px;
-        margin-bottom: 70px;
-        margin-top: 10px;
+    &__button {
+        font-size: 16px;
+        font-weight: 400;
+        color: #ffffff;
+        text-transform: uppercase;
+        letter-spacing: 0.67px;
+        padding: 15px 40px;
+
+        // &::after {
+        //     content: url(../../img/Arrow-down.png);
+        //     position: relative;
+        //     bottom: -100px;
+        //     outline: none;
+        // }
     }
-}
-
-.img {
-    outline: 10px solid blue;
-    margin-bottom: 100px;
-    box-shadow: 0 15px 65px rgba(15, 16, 16, 0.15);
-}
-
-.content-middle p {
-    font-size: 24px;
-    font-family: "Times New Roman", Times, serif;
-    opacity: 0.8;
-    margin-left: 35px;
-    margin-right: 40px;
-    line-height: 40px;
-    font-weight: 500;
-
-    &:first-child {
-        margin-bottom: 40px;
-    }
-}
-
-.content-bottom {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 30px;
-    margin-top: 45px;
-
-    li {
-        font-size: 20px;
-        line-height: 35px;
-        color: #273d46;
-
-        &:first-child {
-            text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
-        }
-
-        &:nth-child(2) {
-            color: #80b7b3;
-            font-style: italic;
-        }
-
-        &:nth-child(3) {
-            font-weight: bold;
-        }
-
-        &:last-child {
-            margin-bottom: 60px;
-
-            span {
-                text-decoration: line-through;
-                opacity: 0.3;
+    &__arrow {
+        display: block;
+        margin: 80px 0 0 415px;
+        img {
+            &:hover {
+                color: black;
             }
         }
+    }
 
-        &::before {
-            content: url("../../img/check_icon.png");
-            position: relative;
-            top: 5px;
-            padding-right: 10px;
+    .button {
+        border: 1px solid white;
+        font-family: Lato;
+        margin: 0 0 0 340px;
+        &:hover {
+            color: red;
+            border: 1px solid red;
         }
     }
-}
-
-.link {
-    color: white;
-    text-transform: uppercase;
-    background: #80b7b3;
-    border-radius: 25px;
-    box-shadow: 0 6px 40px rgba(128, 183, 179, 0.54);
-    letter-spacing: 2.8px;
-    padding: 15px 35px;
-    margin-left: 30px;
-
-    &::after {
-        content: url("../../img/Shape.png");
-        position: relative;
-        top: 2px;
-        left: 7px;
-    }
-}
-
-.margin {
-    margin-top: 110px;
-    visibility: hidden;
 }
